--- a/journal_app/src/main/resources/application.properties
+++ b/journal_app/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-##spring.application.name=Journal App
-#
-#spring.data.mongodb.host=localhost
-#spring.data.mongodb.port=27017
-spring.data.mongodb.database=journaldb
+###spring.application.name=Journal App
 ##
-
-
-spring.data.mongodb.uri=mongodb+srv://singhabhijit1718:I3UJqnT1Zw5q4pvq@cluster0.ezypzrl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-
-spring.data.mongodb.auto-index-creation=true
+##spring.data.mongodb.host=localhost
+##spring.data.mongodb.port=27017
+#spring.data.mongodb.database=journaldb
+###
+#
+#
+#spring.data.mongodb.uri=mongodb+srv://singhabhijit1718:I3UJqnT1Zw5q4pvq@cluster0.ezypzrl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+#
+#spring.data.mongodb.auto-index-creation=true
